--- a/giphy-episode/package.json
+++ b/giphy-episode/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "prop-type": "^0.0.1",
@@ -18,6 +19,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "jest": "^28.1.3",
     "vite": "^3.0.0"
   }
 }
